public/stylesheet.css
/* ... */
@media (prefers-color-scheme: light) {
  :root {
    --asset-svg-copy: var(--lm-asset-svg-copy);
    --asset-svg-copied: var(--lm-asset-svg-copied);
    --color-background: var(--lm-color-background);
    --color-background-transparent: var(--lm-color-background-transparent);
    --color-background-card: var(--lm-color-background-card);
    --color-text-default: var(--lm-color-text-default);
    --color-svg-default: var(--lm-color-svg-default);
    --color-button-hover: var(--lm-color-button-hover);
    --color-button-active: var(--lm-color-button-active);
    --color-button-text-hover: var(--lm-color-button-text-hover);
    --color-disabled: var(--lm-color-disabled);
    --color-shadows: var(--lm-color-shadow);
    --color-link: var(--lm-color-link);
    --color-link-hover: var(--lm-color-link-hover);
    --color-link-visited: var(--lm-color-link-visited);
  }
}

body.dark {
  --asset-svg-copy: var(--dm-asset-svg-copy);
  --asset-svg-copied: var(--dm-asset-svg-copied);
  --color-background: var(--dm-color-background);
  --color-background-transparent: var(--dm-color-background-transparent);
  --color-background-card: var(--dm-color-background-card);
  --color-text-default: var(--dm-color-text-default);
  --color-svg-default: var(--dm-color-svg-default);
  --color-button-hover: var(--dm-color-button-hover);
  --color-button-active: var(--dm-color-button-active);
  --color-button-text-hover: var(--dm-color-button-text-hover);
  --color-disabled: var(--dm-color-disabled);
  --color-shadows: var(--dm-color-shadow);
  --color-link: var(--dm-color-link);
  --color-link-hover: var(--dm-color-link-hover);
  --color-link-visited: var(--dm-color-link-visited);
}
body.light {
  --asset-svg-copy: var(--lm-asset-svg-copy);
  --asset-svg-copied: var(--lm-asset-svg-copied);
  --color-background: var(--lm-color-background);
  --color-background-transparent: var(--lm-color-background-transparent);
  --color-background-card: var(--lm-color-background-card);
  --color-text-default: var(--lm-color-text-default);
  --color-svg-default: var(--lm-color-svg-default);
  --color-button-hover: var(--lm-color-button-hover);
  --color-button-active: var(--lm-color-button-active);
  --color-button-text-hover: var(--lm-color-button-text-hover);
  --color-disabled: var(--lm-color-disabled);
  --color-shadows: var(--lm-color-shadow);
  --color-link: var(--lm-color-link);
  --color-link-hover: var(--lm-color-link-hover);
  --color-link-visited: var(--lm-color-link-visited);
}

/* General */

body {
  background-color: var(--color-background);
  color: var(--color-text-default);
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

button {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
}

a {
  color: inherit;
  cursor: pointer;
  text-decoration: none;
}

#copy-input.hidden {
  border: 0;
  height: 0;
  width: 0;
}

/* Header */

.header {
  margin: 5rem 0 2rem;
  padding: 1rem var(--side-offset);
}
@media (max-width: 860px) {
  .header {
    margin-top: 2rem;
  }
}
@media (max-width: 640px) {
  .header {
    margin: 1rem 0 2rem;
  }
}

.header__title {
  font-family: 'Roboto Mono', monospace;
  font-size: 1.7rem;
  font-weight: 600;
  flex-basis: 40%;
  margin: 0 0 0.5rem;
}

.header__description {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.9rem;
  margin: 0.2rem 0;
}

.header__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  float: right;
  justify-content: flex-end;
  list-style: none;
  margin: 0.2rem 0 0;
}
@media (max-width: 640px) {
  .header__list {
    float: none;
    justify-content: space-around;
    margin: 0 0 1rem;
  }
}

.header__list-item {
  font-family: 'Roboto Mono', monospace;
  font-size: 1rem;
  font-weight: 600;
  margin: 0 0.7rem;
}
.header__list-item:hover {
  color: var(--color-button-hover);
  text-decoration: underline;
}

/* Main */

.main {
  flex-grow: 2;
  margin: 2rem 0;
  padding: 0 var(--side-offset);
}

/* Control */

.control {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  margin: 2rem 0;
  position: relative;
}
@media (max-width: 640px) {
  .control {
    justify-content: flex-end;
    margin: 0.5rem 0;
  }
}

.control-field {
  display: flex;
  flex-direction: column;
  margin-right: 1rem;
}
.control-field:first-of-type {
  flex-basis: 25%;
  min-width: 260px;
}
@media (max-width: 640px) {
  .control-field {
    margin: 0.5rem 0 0.5rem 1rem;
  }
  .control-field:first-of-type {
    flex-basis: 70%;
    flex-grow: 1;
    margin: 0.5rem 0;
  }
}

.control-field__title {
  font-family: 'Roboto Mono', monospace;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1rem;
  margin-bottom: 0.5rem;
  position: relative;
}
body.no-js .control-field__title {
  color: var(--color-disabled);
}

.control-field__row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
}

.control__button,
.control__input {
  background-color: transparent;
  border: 0.1rem solid var(--color-button-hover);
  color: var(--color-text-default);
  height: 2.4rem;
  padding: 0.4rem;
}

.control__input {
  font-family: 'Roboto Mono', monospace;
  outline: 0;
  padding: 0.4rem 2rem 0.4rem 0.8rem;
  width: 100%;
}
.control__input:focus {
  box-shadow: 0 0 3px 0 rgba(68, 68, 68, 0.5);
}
@media (max-width: 640px) {
  .control__input {
    font-size: 1.1rem;
  }
}

.control__button {
  cursor: default; /* Button should not work when JS is disabled */
  fill: var(--color-button-hover);
  margin: 0 0.3rem;
  width: 2.4rem;
}
.control__button:first-of-type {
  margin-left: 0;
}
.control__button:not(:disabled):focus,
.control__button:not(:disabled):hover {
  background-color: var(--color-button-hover) !important;
  border-color: var(--color-button-hover) !important;
  cursor: pointer;
  fill: var(--color-background);
}
.control__button.hidden {
  display: none;
}

/* Control - disabled */

.control__input:disabled {
  border-color: var(--color-disabled);
}
/* ... */

